修复高德地图加载问题

--- a/chuan-yu-travel.html
+++ b/chuan-yu-travel.html
@@ -6,6 +6,7 @@
     <title>大连-成都-重庆 交互式旅游指南</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <!-- 使用HTTPS加载高德地图API -->
     <script type="text/javascript" src="https://webapi.amap.com/maps?v=2.0&key=9d4cfaadc1662d1da2db7afcadac99df"></script>
     <script type="text/javascript" src="https://webapi.amap.com/maps/plugin?v=2.0&plugin=AMap.ToolBar,AMap.Driving,AMap.Walking,AMap.Transfer,AMap.Scale,AMap.PolyEditor,AMap.Geolocation"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Noto+Sans+SC:wght@400;500;700&display=swap" rel="stylesheet">
@@ -201,5 +202,7 @@
     <script src="travel-data.js"></script>
     <script src="map-utils.js"></script>
     <script src="app.js"></script>
+    <!-- 添加修复脚本 -->
+    <script src="fix-map.js"></script>
 </body>
 </html> 
