简化项目结构，创建简化版旅游指南，移除不必要文件

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>川渝十日漫游记 - 交互式旅游指南</title>
-    <meta http-equiv="refresh" content="0; url=chuan-yu-travel.html">
+    <meta http-equiv="refresh" content="0; url=simple-travel.html">
     <style>
         body {
             font-family: 'Noto Sans SC', sans-serif;
@@ -21,7 +21,7 @@
             font-size: 18px;
         }
         .redirect-link {
-            color: #0d9488;
+            color: #0d6efd;
             text-decoration: none;
             font-weight: bold;
         }
@@ -31,7 +31,7 @@
         .loader {
             margin: 30px auto;
             border: 5px solid #f3f3f3;
-            border-top: 5px solid #0d9488;
+            border-top: 5px solid #0d6efd;
             border-radius: 50%;
             width: 50px;
             height: 50px;
@@ -45,13 +45,13 @@
 </head>
 <body>
     <h1>川渝十日漫游记</h1>
-    <p>正在加载交互式旅游指南，请稍候...</p>
+    <p>正在加载简化版旅游指南，请稍候...</p>
     
     <div class="loader"></div>
     
     <p class="loading">
         如果页面没有自动跳转，请点击 
-        <a href="chuan-yu-travel.html" class="redirect-link">这里</a> 手动进入。
+        <a href="simple-travel.html" class="redirect-link">这里</a> 手动进入。
     </p>
 </body>
 </html> 
